--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <pre><h3>Hi! Guys, Welcome to my portfolio
 I am Mohith an aspiring Computer science student
 Contact<img style="position: absolute;" id="skillphoto" src="phone.webp">   : +91 9347228230   Email<img style="position: absolute;" id="skillphoto" src="Gmail_Logo_128px.webp">   : mohithallu90@gmail.com      linkedin<img style="position: absolute;" id="skillphoto" src="linkedin.webp">   : <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a> 
-Resume :<a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
+Resume :<a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">ClickMe</a>
             </h3>
         </pre>
     </body>
