--- a/softwares.html
+++ b/softwares.html
@@ -1,42 +1,59 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Mohith Allu/softwares</title>
-        <link rel="stylesheet" href="index.css">
-        </head>
-    <body>
-        <center>
-            <table class="skills">
-                <tr>
-                    <th>Software</th>
-                    <th>Rating</th>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="android.webp">Android Studio</td>
-                    <td>2/5</td>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="autocad.webp">Autocad</td>
-                    <td>3/5</td>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="raptor.gif">Raptor</td>
-                    <td>4/5</td>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="tableau.webp">Tableau</td>
-                    <td>4/5</td>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="photoshop.webp">Adobe photoshop</td>
-                    <td>4/5</td>
-                </tr>
-                <tr >
-                    <td><img id="skillphoto" src="sql+.webp">Sql plus</td>
-                    <td>4/5</td>
-                </tr>
-                
-            </table>
-        </center>
-        <a href="index.html"><button id="subbutton">Home</button></a>
-    </body>
+<head>
+    <title>Mohith Allu - Software</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="certification.html">Certifications</a></li>
+                <li><a href="internship.html">Internships</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="softwares.html">Software</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <center>
+        <table class="skills">
+            <tr>
+                <th>Software</th>
+                <th>Rating</th>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/android.webp">Android Studio</td>
+                <td>2/5</td>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/autocad.webp">Autocad</td>
+                <td>3/5</td>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/raptor.gif">Raptor</td>
+                <td>4/5</td>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/tableau.webp">Tableau</td>
+                <td>4/5</td>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/photoshop.webp">Adobe Photoshop</td>
+                <td>4/5</td>
+            </tr>
+            <tr>
+                <td><img id="skillphoto" src="assets/sql+.webp">SQL Plus</td>
+                <td>4/5</td>
+            </tr>
+        </table>
+    </center>
+
+    <footer>
+        <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
+    </footer>
+</body>
 </html>
