--- a/education.html
+++ b/education.html
@@ -1,11 +1,25 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Mohith Allu/education</title>
-        <link rel="stylesheet" href="index.css">
-        </head>
-    <body>
-        
+<head>
+    <title>Mohith Allu - Education</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="certification.html">Certifications</a></li>
+                <li><a href="internship.html">Internships</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="softwares.html">Software</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <center>
         <table>
             <tr>
                 <th>Level</th>
@@ -35,7 +49,11 @@
                 <td>2019</td>
                 <td>9.7</td>
             </tr>
-            </table>
-            <a href="index.html"><button id="subbutton">Home</button></a>
-    </body>
+        </table>
+    </center>
+
+    <footer>
+        <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
+    </footer>
+</body>
 </html>
