--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
-<html>
-    <head>
-        <title>Mohith Allu</title>
-        <link rel="stylesheet" href="index.css">
-        </head>
-    <body>
-        <center><h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;" id="name">Mohith Allu Portfolio</h1></center>
-        <table >
+<!DOCTYPE html>
+<html lang="en">
 
-            <tr>
-            <td rowspan="3"><img id="photo" src="mohith.jpg">
-            </td>
-            <td><a href="skills.html"><button>Skills</button></a></td>
-            <td><a href="certification.html"><button>Certifications</button></a></td>
-            <td><a href="internship.html"><button>Internships</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="education.html"><button>Education</button></a></td>
-                <td><a href="projects.html"><button>Projects</button></a></td>                
-                <td><a href="softwares.html"><button>Software</button></a></td>
-            </tr>
-        </table>
-        <h2>About:</h2>
-        <pre><h3>Hi! Guys, Welcome to my portfolio
-I am Mohith an aspiring Computer science student
-Contact<img style="position: absolute;" id="skillphoto" src="phone.webp">   : +91 9347228230   Email<img style="position: absolute;" id="skillphoto" src="Gmail_Logo_128px.webp">   : mohithallu90@gmail.com      linkedin<img style="position: absolute;" id="skillphoto" src="linkedin.webp">   : <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a> 
-Resume :<a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">ClickMe</a>
-            </h3>
-        </pre>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mohith Allu Portfolio</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="certification.html">Certifications</a></li>
+                <li><a href="internship.html">Internships</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="softwares.html">Software</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <center>
+            <h1 id="name">Mohith Allu Portfolio</h1>
+        </center>
+        <div class="grid-container">
+            <div class="profile">
+                <img id="photo" src="assets/mohith.jpg" alt="Mohith Allu" class="grid-photo">
+            </div>
+        <div class="about">
+            <h2>About:</h2>
+            <p>
+                Hi! Guys, Welcome to my portfolio<br>
+                I am Mohith, an aspiring Computer Science student<br>
+                Contact <img id="skillphoto" src="assets/phone.webp" alt="Phone">: +91 9347228230<br>
+                Email <img id="skillphoto" src="assets/Gmail_Logo_128px.webp" alt="Email">: mohithallu90@gmail.com<br>
+                LinkedIn <img id="skillphoto" src="assets/linkedin.webp" alt="LinkedIn">: 
+                <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a><br>
+                Resume: 
+                <a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
+            </p>
+        </div>
+        </div>
+        
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
