--- a/internship.html
+++ b/internship.html
@@ -1,31 +1,44 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Mohith Allu/internships</title>
-        <link rel="stylesheet" href="index.css">
-        </head>
-    <body>
-        <a href="index.html"><button id="subbutton">Home</button></a>      
-        <center>
-            <table class="skills">
-                <tr>
-                    <th>Internship</th>
-                    <th>Certficate</th>
-                </tr>
-                <tr >
-                    <td>AICTE AI & MLVIRTUAL INTERNSHIP </td>
-                    <td><img id="internphoto" src="aimlaicte.png"></td>
-                </tr>
-                <tr >
-                    <td>1STOP.AI DATA SCIENCE </td>
-                    <td><img id="internphoto" src="1stopdatascience.png"></td>
-                </tr>
-                <tr >
-                    <td>Technohacks</td>
-                    <td><img id="internphoto" src="technohacks.png"></td>
-                </tr>
-                
-            </table>
-        </center>
-        
-        </body>
-</html>
+<head>
+    <title>Mohith Allu - Internships</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="certification.html">Certifications</a></li>
+                <li><a href="internship.html">Internships</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="softwares.html">Software</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <center>
+        <table class="skills">
+            <tr>
+                <th>Internship</th>
+                <th>Certificate</th>
+            </tr>
+            <tr>
+                <td>AICTE AI & ML Virtual Internship</td>
+                <td><img id="internphoto" src="assets/aimlaicte.png"></td>
+            </tr>
+            <tr>
+                <td>1STOP.AI Data Science</td>
+                <td><img id="internphoto" src="assets/1stopdatascience.png"></td>
+            </tr>
+            <tr>
+                <td>Technohacks</td>
+                <td><img id="internphoto" src="assets/technohacks.png"></td>
+            </tr>
+        </table>
+    </center>
+
+    <footer>
+        <p>&copy; 2024 Mohith Allu.
