--- a/skills.html
+++ b/skills.html
@@ -1,42 +1,59 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Mohith Allu/skills</title>
-        <link rel="stylesheet" href="index.css">
-        </head>
-    <body>
-        <center>
+<head>
+    <title>Mohith Allu - Skills</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="certification.html">Certifications</a></li>
+                <li><a href="internship.html">Internships</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="softwares.html">Software</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <center>
         <table class="skills">
             <tr>
                 <th>Language</th>
                 <th>Rating</th>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="c.png">C language</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/c.png">C language</td>
                 <td>3/5</td>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="python.jpeg">Python</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/python.jpeg">Python</td>
                 <td>4/5</td>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="java.png">Java</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/java.png">Java</td>
                 <td>2/5</td>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="sql.png">SQL</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/sql.png">SQL</td>
                 <td>4/5</td>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="HTML.png">HTML,<img id="skillphoto" src="css.jpeg">CSS,<img id="skillphoto" src="js.jpeg">JS</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/HTML.png">HTML,<img id="skillphoto" src="assets/css.jpeg">CSS,<img id="skillphoto" src="assets/js.jpeg">JS</td>
                 <td>4/5</td>
             </tr>
-            <tr >
-                <td><img id="skillphoto" src="mean.jpeg">MEAN Stack Devlopment</td>
+            <tr>
+                <td><img id="skillphoto" src="assets/mean.jpeg">MEAN Stack Development</td>
                 <td>4/5</td>
             </tr>
-            
         </table>
     </center>
-        <a href="index.html"><button id="subbutton">Home</button></a>
-    </body>
+
+    <footer>
+        <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
+    </footer>
+</body>
 </html>
