--- a/education.html
+++ b/education.html
@@ -19,38 +19,32 @@
         </nav>
     </header>
 
-    <center>
-        <table>
-            <tr>
-                <th>Level</th>
-                <th>Course/Board</th>
-                <th>Institution</th>
-                <th>Year of Passing</th>
-                <th>Grade/Marks</th>
-            </tr>
-            <tr>
-                <td>Graduation</td>
-                <td>B.Tech</td>
-                <td>RVR and JC College of Engineering</td>
-                <td>2025</td>
-                <td>9.2</td>
-            </tr>
-            <tr>
-                <td>Class XII</td>
-                <td>Andhra Pradesh Board</td>
-                <td>Sri Chaitanya</td>
-                <td>2021</td>
-                <td>970</td>
-            </tr>
-            <tr>
-                <td>Class X</td>
-                <td>Telangana Board</td>
-                <td>Sri Chaitanya</td>
-                <td>2019</td>
-                <td>9.7</td>
-            </tr>
-        </table>
-    </center>
+ 
+    <section>
+    <div class="card-education">
+        <h1>Graduation</h1>
+        RVR and JC College of Engineering<br><br>
+        Course:B.Tech<br><br>
+        Branch:Computer Science and Engineering<br><br>
+        CGPA:9.12<br><br>
+        Year of passing:2025
+    </div>
+    <div class="card-education">
+        <h1>Class XII</h1>
+        Sri Chaitanya College<br><br>
+        Board:Andra Pradesh Board<br><br>
+        Stream:MPC<br><br>
+        Marks:970<br><br>
+        Year of passing:2021
+    </div>
+    <div class="card-education">
+        <h1>Class X</h1>
+        Sri Chaitanya techno school<br><br>
+        Board:Telangana Board<br><br>
+        GPA:9.7<br><br>
+        Year of passing:2019
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
