--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohith Allu Portfolio</title>
+    <title >Mohith Allu Portfolio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -25,12 +25,13 @@
 
     <main>
         <center>
-            <h1 id="name">Mohith Allu Portfolio</h1>
-            <div class="profile">
-                <img id="photo" src="assets/mohith.jpg" alt="Mohith Allu" class="grid-photo">
-            </div>
-        <div class="about">
-            <h2>About:</h2>
+            <h1 style="margin-top:100px;" id="name">Mohith Allu Portfolio</h1>
+            <section class="card">
+                <div>
+                <img class="card-photo" src="assets/mohith.jpg" alt="Mohith Allu" >
+                </div>
+            <div class="about">
+            <h2 class="card-photo-title">About:</h2>
             <p>
                 Hi! Guys, Welcome to my portfolio<br>
                 I am Mohith, an aspiring Computer Science student<br>
@@ -42,6 +43,7 @@
                 <a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
             </p>
         </div>
+        </section>
         </center>
     </main>
 
@@ -51,3 +53,4 @@
 </body>
 
 </html>
+
