--- a/skills.html
+++ b/skills.html
@@ -19,39 +19,46 @@
         </nav>
     </header>
 
-    <center>
-        <table class="skills">
-            <tr>
-                <th>Language</th>
-                <th>Rating</th>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/c.png">C language</td>
-                <td>3/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/python.jpeg">Python</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/java.png">Java</td>
-                <td>2/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/sql.png">SQL</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/HTML.png">HTML,<img id="skillphoto" src="assets/css.jpeg">CSS,<img id="skillphoto" src="assets/js.jpeg">JS</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/mean.jpeg">MEAN Stack Development</td>
-                <td>4/5</td>
-            </tr>
-        </table>
-    </center>
 
+    </center>
+<section>
+    <div class="card-skill">
+        <center><img src="assets/c.png">
+        <h2 class="card-skill-title">C language</h2>
+        <p class="card-skill-content">Rating:3/5</p>
+        </center>
+    </div>
+    <div class="card-skill">
+        <center><img src="assets/python.jpeg">
+        <h2 class="card-skill-title">Python</h2>
+        <p class="card-skill-content">Rating:4/5</p>
+        </center>
+    </div>
+    <div class="card-skill">
+        <center><img src="assets/java.png">
+        <h2 class="card-skill-title">Java</h2>
+        <p class="card-skill-content">Rating:2/5</p>
+        </center>
+    </div>
+    <div class="card-skill">
+        <center><img src="assets/sql.png">
+        <h2 class="card-skill-title">SQL</h2>
+        <p class="card-skill-content">Rating:4/5</p>
+        </center>
+    </div>
+    <div class="card-skill">
+        <center><img src="assets/HTML.png"><img src="assets/css.jpeg"><img src="assets/js.jpeg">
+        <h2 class="card-skill-title">HTML,CSS,JAVA SCRIPT</h2>
+        <p class="card-skill-content">Rating:4/5</p>
+        </center>
+    </div>
+    <div class="card-skill">
+        <center><img src="assets/mean.jpeg">
+        <h2 class="card-skill-title">MEAN Stack Development</h2>
+        <p class="card-skill-content">Rating:4/5</p>
+        </center>
+    </div>
+</section>
     <footer>
         <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
     </footer>
