--- a/internship.html
+++ b/internship.html
@@ -19,26 +19,22 @@
         </nav>
     </header>
 
-    <center>
-        <table class="skills">
-            <tr>
-                <th>Internship</th>
-                <th>Certificate</th>
-            </tr>
-            <tr>
-                <td>AICTE AI & ML Virtual Internship</td>
-                <td><img id="internphoto" src="assets/aimlaicte.png"></td>
-            </tr>
-            <tr>
-                <td>1STOP.AI Data Science</td>
-                <td><img id="internphoto" src="assets/1stopdatascience.png"></td>
-            </tr>
-            <tr>
-                <td>Technohacks</td>
-                <td><img id="internphoto" src="assets/technohacks.png"></td>
-            </tr>
-        </table>
-    </center>
-
+    <section>
+        <div class="card-internship">
+            <center><img src="assets/aimlaicte.png">
+            <h2 class="card-internship-title">AICTE AI & ML Virtual Internship</h2>
+            </center>
+        </div>
+        <div class="card-internship">
+            <center><img src="assets/1stopdatascience.png">
+            <h2 class="card-internship-title">1STOP.AI Data Science</h2>
+            </center>
+        </div>
+        <div class="card-internship">
+            <center><img src="assets/technohacks.png">
+            <h2 class="card-internship-title">Technohacks</h2>
+            </center>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2024 Mohith Allu.
