--- a/softwares.html
+++ b/softwares.html
@@ -19,39 +19,45 @@
         </nav>
     </header>
 
-    <center>
-        <table class="skills">
-            <tr>
-                <th>Software</th>
-                <th>Rating</th>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/android.webp">Android Studio</td>
-                <td>2/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/autocad.webp">Autocad</td>
-                <td>3/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/raptor.gif">Raptor</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/tableau.webp">Tableau</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/photoshop.webp">Adobe Photoshop</td>
-                <td>4/5</td>
-            </tr>
-            <tr>
-                <td><img id="skillphoto" src="assets/sql+.webp">SQL Plus</td>
-                <td>4/5</td>
-            </tr>
-        </table>
-    </center>
-
+   
+    <section>
+        <div class="card-skill">
+            <center><img src="assets/android.webp">
+            <h2 class="card-skill-title">Android Studio</h2>
+            <p class="card-skill-content">Rating:2/5</p>
+            </center>
+        </div>
+        <div class="card-skill">
+            <center><img src="assets/autocad.webp">
+            <h2 class="card-skill-title">Autocad</h2>
+            <p class="card-skill-content">Rating:2/5</p>
+            </center>
+        </div>
+        <div class="card-skill">
+            <center><img src="assets/raptor.gif">
+            <h2 class="card-skill-title">Android Studio</h2>
+            <p class="card-skill-content">Rating:2/5</p>
+            </center>
+        </div>
+        <div class="card-skill">
+            <center><img src="assets/tableau.webp">
+            <h2 class="card-skill-title">Tableau</h2>
+            <p class="card-skill-content">Rating:4/5</p>
+            </center>
+        </div>
+        <div class="card-skill">
+            <center><img src="assets/photoshop.webp">
+            <h2 class="card-skill-title">Adobe Photoshop</h2>
+            <p class="card-skill-content">Rating:4/5</p>
+            </center>
+        </div>
+        <div class="card-skill">
+            <center><img src="assets/sql+.webp">
+            <h2 class="card-skill-title">SQL Plus</h2>
+            <p class="card-skill-content">Rating:4/5</p>
+            </center>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2024 Mohith Allu. All rights reserved.</p>
     </footer>
