--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 LinkedIn <img id="skillphoto" src="assets/linkedin.webp" alt="LinkedIn">: 
                 <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a><br>
                 Resume: 
-                <a href="https://www.canva.com/design/DAGBRO2WnrU/DzIXkSH2QSdyWJ4mD3hSdg/edit?utm_content=DAGBRO2WnrU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
+                <a href="https://www.canva.com/design/DAGLAdd_D4g/fRH21PmJyRphBxInTCIn6w/edit?utm_content=DAGLAdd_D4g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
             </p>
         </div>
         </section>
