--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,10 @@
                 <td>Credit_EDA</td>
                 <td><a href="https://github.com/MohithAllu/Credit_EDA">Click</a></td>
             </tr>
+	    <tr>
+                <td>Personal Gemini Ai Bot</td>
+                <td><a href="https://github.com/MohithAllu/Personal-Gemini-Ai-bot">Click</a></td>
+            </tr>
         </table>
     </center>
 
