--- a/sample.html
+++ b/sample.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohith Allu Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
-            line-height: 1.6;
             color: #333;
+            scroll-behavior: smooth;
         }
 
         header {
             background: #4CAF50;
             color: white;
-            padding: 10px 0;
+            padding: 15px 0;
             position: fixed;
             top: 0;
             width: 100%;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .navbar {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
         }
 
         .navbar ul {
@@ -40,15 +43,15 @@
         }
 
         .navbar ul li {
-            margin: 0 15px;
+            margin: 0 20px;
         }
 
         .navbar ul li a {
             color: white;
             text-decoration: none;
-            padding: 8px 15px;
+            padding: 10px 20px;
             display: block;
-            border-radius: 5px;
+            border-radius: 25px;
             transition: background-color 0.3s;
         }
 
@@ -56,8 +59,13 @@
             background-color: #333;
         }
 
+        .navbar .menu-icon {
+            display: none;
+            cursor: pointer;
+        }
+
         main {
-            margin-top: 80px;
+            margin-top: 90px;
             padding: 20px;
         }
 
@@ -67,9 +75,21 @@
 
         .hero {
             text-align: center;
-            padding: 50px;
-            background: linear-gradient(to right, #56ab2f, #a8e063);
+            padding: 100px 20px;
+            background: url('assets/hero-bg.jpg') center/cover no-repeat;
             color: white;
+            position: relative;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1;
         }
 
         .hero img {
@@ -77,29 +97,49 @@
             width: 150px;
             height: 150px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+            position: relative;
         }
 
         .hero h1 {
             margin-top: 20px;
-            font-size: 2.5em;
+            font-size: 3em;
+            z-index: 2;
+            position: relative;
         }
 
         .hero p {
-            font-size: 1.2em;
+            font-size: 1.3em;
             margin: 20px 0;
+            z-index: 2;
+            position: relative;
+        }
+
+        .hero a {
+            color: #4CAF50;
+            text-decoration: underline;
+            z-index: 2;
+            position: relative;
         }
 
         .section-title {
-            font-size: 2em;
-            margin-bottom: 20px;
+            font-size: 2.5em;
+            margin-bottom: 30px;
             text-align: center;
             color: #4CAF50;
-            border-bottom: 2px solid #4CAF50;
+            position: relative;
+            z-index: 1;
             display: inline-block;
-            padding-bottom: 5px;
+            padding-bottom: 10px;
+            border-bottom: 3px solid #4CAF50;
         }
 
-        .skills, .certifications, .internships, .education, .projects, .software {
+        .skills,
+        .certifications,
+        .internships,
+        .education,
+        .projects,
+        .software {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -107,22 +147,23 @@
 
         .card {
             background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 15px;
-            padding: 20px;
-            width: 300px;
+            border-radius: 15px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            margin: 20px;
+            padding: 30px;
+            width: 280px;
             text-align: center;
-            transition: transform 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .card:hover {
             transform: translateY(-10px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
 
         .card img {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             margin-bottom: 15px;
         }
 
@@ -131,15 +172,91 @@
             color: white;
             text-align: center;
             padding: 20px;
+            margin-top: 50px;
         }
 
         a {
             color: #4CAF50;
             text-decoration: none;
+            transition: color 0.3s;
         }
 
         a:hover {
-            text-decoration: underline;
+            color: #388E3C;
+        }
+
+        /* Background pattern for sections */
+        section:nth-child(odd) {
+            background-color: #f0f7f5;
+            padding: 50px 0;
+        }
+
+        section:nth-child(even) {
+            background-color: #ffffff;
+            padding: 50px 0;
+        }
+
+        /* Mobile Responsive Design */
+        @media (max-width: 768px) {
+            .navbar ul {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+            }
+
+            .navbar ul.show {
+                display: flex;
+            }
+
+            .navbar ul li {
+                margin: 10px 0;
+                text-align: center;
+            }
+
+            .navbar .menu-icon {
+                display: block;
+            }
+
+            .hero {
+                padding: 80px 20px;
+            }
+
+            .hero img {
+                width: 120px;
+                height: 120px;
+            }
+
+            .hero h1 {
+                font-size: 2em;
+            }
+
+            .hero p {
+                font-size: 1.1em;
+            }
+
+            .section-title {
+                font-size: 2em;
+            }
+
+            .card {
+                width: 90%;
+                margin: 15px 0;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero img {
+                width: 100px;
+                height: 100px;
+            }
+
+            .hero h1 {
+                font-size: 1.8em;
+            }
+
+            .hero p {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -148,6 +265,9 @@
 
     <header>
         <nav class="navbar">
+            <div class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -166,8 +286,11 @@
             <h1>Mohith Allu Portfolio</h1>
             <p>I am Mohith, an aspiring Computer Science student</p>
             <p>Contact: +91 9347228230 | Email: mohithallu90@gmail.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">MohithAllu</a></p>
-            <p>Resume: <a href="https://www.canva.com/design/DAGLAdd_D4g/fRH21PmJyRphBxInTCIn6w/edit?utm_content=DAGLAdd_D4g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Click Here</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                    target="_blank">MohithAllu</a></p>
+            <p>Resume: <a
+                    href="https://www.canva.com/design/DAGLAdd_D4g/fRH21PmJyRphBxInTCIn6w/edit?utm_content=DAGLAdd_D4g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                    target="_blank">Click Here</a></p>
         </section>
 
         <section id="skills">
@@ -221,7 +344,7 @@
         <section id="internships">
             <h2 class="section-title">Internships</h2>
             <div class="internships">
-                               <div class="card">
+                <div class="card">
                     <img src="assets/internship1.jpg" alt="Internship">
                     <h3>Software Development Intern</h3>
                     <p>Company: XYZ Corp</p>
@@ -244,7 +367,7 @@
                     <h3>Bachelor of Technology in Computer Science</h3>
                     <p>University: XYZ University</p>
                     <p>Duration: 2020 - 2024</p>
-                    <p>GPA: 9.12/10</p>
+                    <p>GPA: 3.8/4.0</p>
                 </div>
             </div>
         </section>
@@ -257,7 +380,12 @@
                     <h3>Project Management System</h3>
                     <p>Description: Developed a full-stack project management application using MERN stack.</p>
                 </div>
-                
+                <div class="card">
+                    <img src="assets/project2.jpg" alt="Project 2">
+                    <h3>Chat Application</h3>
+                    <p>Description: Created a real-time chat application using Node.js and Socket.io.</p>
+                </div>
+            </div>
         </section>
 
         <section id="software">
@@ -268,7 +396,16 @@
                     <h3>Visual Studio Code</h3>
                     <p>Proficiency: 4/5</p>
                 </div>
-  
+                <div class="card">
+                    <img src="assets/git.png" alt="Git">
+                    <h3>Git</h3>
+                    <p>Proficiency: 4/5</p>
+                </div>
+                <div class="card">
+                    <img src="assets/docker.png" alt="Docker">
+                    <h3>Docker</h3>
+                    <p>Proficiency: 3/5</p>
+                </div>
             </div>
         </section>
     </main>
@@ -280,7 +417,7 @@
     <script>
         // Smooth scrolling for navigation links
         document.querySelectorAll('.navbar a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
+            anchor.addEventListener('click', function (e) {
                 e.preventDefault();
 
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
@@ -288,8 +425,12 @@
                 });
             });
         });
+
+        // Toggle menu for mobile
+        document.querySelector('.menu-icon').addEventListener('click', function () {
+            document.querySelector('.navbar ul').classList.toggle('show');
+        });
     </script>
 </body>
 
 </html>
-
