--- a/sample.html
+++ b/sample.html
@@ -281,16 +281,27 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <img src="assets/mohith.jpg" alt="Mohith Allu">
-            <h1>Mohith Allu Portfolio</h1>
-            <p>I am Mohith, an aspiring Computer Science student</p>
-            <p>Contact: +91 9347228230 | Email: mohithallu90@gmail.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank">MohithAllu</a></p>
-            <p>Resume: <a
-                    href="https://www.canva.com/design/DAGLAdd_D4g/fRH21PmJyRphBxInTCIn6w/edit?utm_content=DAGLAdd_D4g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-                    target="_blank">Click Here</a></p>
+         <center>
+            <h1 style="margin-top:100px;" id="name">Mohith Allu Portfolio</h1>
+            <section class="card">
+                <div>
+                <img class="card-photo" src="assets/mohith.jpg" alt="Mohith Allu" >
+                </div>
+            <div class="about">
+            <h2 class="card-photo-title">About:</h2>
+            <p>
+                Hi! Guys, Welcome to my portfolio<br>
+                I am Mohith, an aspiring Computer Science student<br>
+                Contact <img id="skillphoto" src="assets/phone.webp" alt="Phone">: +91 9347228230<br>
+                Email <img id="skillphoto" src="assets/Gmail_Logo_128px.webp" alt="Email">: mohithallu90@gmail.com<br>
+                LinkedIn <img id="skillphoto" src="assets/linkedin.webp" alt="LinkedIn">: 
+                <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a><br>
+                Resume: 
+                <a href="https://www.canva.com/design/DAGLAdd_D4g/fRH21PmJyRphBxInTCIn6w/edit?utm_content=DAGLAdd_D4g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
+            </p>
+        </div>
+        </section>
+        </center>
         </section>
 
         <section id="skills">
