--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 LinkedIn <img id="skillphoto" src="assets/linkedin.webp" alt="LinkedIn">: 
                 <a href="https://www.linkedin.com/in/mohith-allu-360056258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">MohithAllu</a><br>
                 Resume: 
-                <a href="https://www.canva.com/design/DAGSHufrXF4/aN7NYjvqc0jx1H3cv0MKTw/edit?utm_content=DAGSHufrXF4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
+                <a href="https://www.canva.com/design/DAGXpk4v8XI/FmvemUXtWzeuFvwqzykhpQ/edit?utm_content=DAGXpk4v8XI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Click</a>
             </p>
         </div>
         </section>
